[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/ladrillo_rompe.gd" type="Script" id=1]
[ext_resource path="res://todoslostilesmitad.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.3652, 9.63937 )

[node name="ladrillo_rompe3" type="RigidBody2D"]
position = Vector2( 462.061, -339.944 )
mass = 0.00102041
gravity_scale = 0.0
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.35579, -0.0998635 )
scale = Vector2( 0.47913, 0.479131 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.827764, 1.94922 )
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_ladrillo_rompe_body_entered"]
