[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/ladrillo_rompe.gd" type="Script" id=1]
[ext_resource path="res://todoslostilesmitad.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.3652, 9.63937 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 27.7851, 11.7524 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16.694, 20.0242 )

[node name="ladrillo_rompe3" type="KinematicBody2D" groups=[
"destruible",
"rompible",
]]
position = Vector2( -3.79813, 1.77502 )
script = ExtResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -0.264862, 4.76758 )
scale = Vector2( 4.08, 1.66986 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.35579, -0.0998635 )
scale = Vector2( 0.47913, 0.479131 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.827764, 1.94922 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.827764, 1.94922 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
disabled = true

[node name="TopHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopHitbox"]
position = Vector2( -1.05946, -29.665 )
shape = SubResource( 4 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
